@@ -40,9 +40,12 @@ typedef enum
     MACHINE_POWERBOOK_56,
     MACHINE_POWERBOOK_57,
     MACHINE_POWERBOOK_61,
+    MACHINE_POWERBOOK_62,
     MACHINE_POWERBOOK_63,
     MACHINE_POWERBOOK_64,
     MACHINE_POWERBOOK_65,
+    MACHINE_POWERBOOK_67,
+    MACHINE_POWERBOOK_68,
 #endif /* !__powerpc__ */
     MACHINE_LAST
   } machine_type;
